--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
             background: linear-gradient(135deg, #4facfe, #00f2fe);
             color: white;
             text-align: center;
-            height: 100vh;
             margin: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            padding-top: 30px;
+            padding: 20px;
         }
-        h1 { font-size: 2.2em; margin-bottom: 10px; }
+        h1 { font-size: 2em; margin-bottom: 10px; }
         select, button {
             padding: 10px;
             margin: 10px;
@@ -34,12 +29,15 @@
         }
         button:hover { background-color: #f50057; }
         #status { margin-top: 15px; font-size: 1em; }
-        #recognizedText, #translatedText {
+        .box {
             background: rgba(255,255,255,0.2);
             padding: 10px;
             margin-top: 10px;
             border-radius: 8px;
             width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            min-height: 40px;
             word-wrap: break-word;
         }
     </style>
@@ -72,18 +70,21 @@
     <button id="startBtn">🎤 Dinlemeyi Başlat</button>
     <p id="status">Hazır</p>
 
-    <div id="recognizedText"></div>
-    <div id="translatedText"></div>
+    <div class="box" id="recognizedText">🎙 Algılanan metin burada görünecek</div>
+    <div class="box" id="translatedText">🌐 Çevrilen metin burada görünecek</div>
+    <button id="speakBtn" style="display:none;">🔊 Sesle Oku</button>
 
     <script>
         const startBtn = document.getElementById('startBtn');
         const statusText = document.getElementById('status');
         const recognizedText = document.getElementById('recognizedText');
         const translatedText = document.getElementById('translatedText');
+        const speakBtn = document.getElementById('speakBtn');
         const sourceLang = document.getElementById('sourceLang');
         const targetLang = document.getElementById('targetLang');
 
         let recognition;
+        let lastTranslated = "";
 
         startBtn.addEventListener('click', function() {
             if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
@@ -114,7 +115,7 @@
 
             recognition.onresult = function(event) {
                 const transcript = event.results[0][0].transcript;
-                recognizedText.textContent = "Algılanan: " + transcript;
+                recognizedText.textContent = transcript;
                 translateText(transcript, sourceLang.value, targetLang.value);
             };
 
@@ -146,16 +147,23 @@
 
                 const data = await response.json();
                 if (data && data.translatedText) {
-                    translatedText.textContent = "Çeviri (" + target + "): " + data.translatedText;
-                    speakText(data.translatedText, target);
+                    translatedText.textContent = data.translatedText;
+                    lastTranslated = data.translatedText;
+                    speakBtn.style.display = "inline-block";
                 } else {
                     translatedText.textContent = "Çeviri yapılamadı.";
+                    speakBtn.style.display = "none";
                 }
             } catch (error) {
                 console.error("Çeviri hatası:", error);
                 translatedText.textContent = "Çeviri hatası!";
+                speakBtn.style.display = "none";
             }
         }
+
+        speakBtn.addEventListener('click', function() {
+            speakText(lastTranslated, targetLang.value);
+        });
 
         function speakText(text, lang) {
             if (!text || text.trim() === "") {
